# personal-skill-polish

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHOWCASE.md  demo.py  pyproject.toml  requirements.txt  roadmap.json  run_backend.sh  setup.sh
.github/workflows/: ci.yml
backend/: __init__.py  cli.py  load_roadmap.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed_data.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/tests/: test_api.py
cli/: main.py
docs/: API.md
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Dashboard.tsx  PhasesList.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/phases/: [id].tsx  index.tsx
frontend/styles/: globals.css
