[tool.poetry]
name = "personal-skill-polish"
version = "0.1.0"
description = "Personal Skill Polish Tracker for AI/ML System Design Roadmap"
authors = ["hasithdd"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
skillcli = "backend.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "C4"]

[tool.ruff.lint]
ignore = ["B008"]  # Allow function calls in argument defaults (FastAPI/Typer pattern)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing --cov-report=html"
